--- a/app/views/angular/index.html.erb
+++ b/app/views/angular/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Angular#index</h1>
-<p>Find me in app/views/angular/index.html.erb</p>
+<div class="container" ng-app="Jello">
+  <nav class="navbar navbar-default">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Jello!</a>
+      </div>
+
+
+      <ul class="nav navbar-nav">
+        <li><a>New Board</a></li>
+      </ul>
+
+    <ul class="nav navbar-nav navbar-right">
+      <li><a>Log out</a></li>
+    </ul>
+
+  </nav>
+
+
+  <ui-view></ui-view>
+</div>
