views and states

--- a/public/templates/boards/show.html
+++ b/public/templates/boards/show.html
@@ -8,10 +8,10 @@
 
   <div class="row">
     <div class="col-xs-8">
-      <ui-view="list-index"></ui-view>
+      <div ui-view="list-index"></div>
     </div>
     <div class="col-xs-4">
-      <ui-view="activity-feed"></ui-view>
+      <div ui-view="activity-feed"></div>
     </div>
   </div>
 </div>
