--- a/app/views/angular/index.html.erb
+++ b/app/views/angular/index.html.erb
@@ -10,7 +10,7 @@
       </ul>
 
     <ul class="nav navbar-nav navbar-right">
-      <li><a>Log out</a></li>
+      <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
     </ul>
 
   </nav>
