--- a/public/templates/boards/show.html
+++ b/public/templates/boards/show.html
@@ -1,8 +1,8 @@
 <div class="container">
-<h3> {{currentBoard.title}} </h3> 
+<h3> {{currentBoard.title }}</h3> 
 
 <select>
-  <option ng-repeat="board in user">{{board.title}}</option>
+  <option ng-repeat="board in boards">{{board.title}}</option>
 </select>
 <a>Delete Board</a> <a>Create Board</a>
 
