--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,15 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+#list-index {
+  display: flex;
+  overflow-x: scroll;
+}
+
+.list {
+  width: 300px;
+  display: inline-block;
+  margin: 14px;
+}
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -12,6 +22,7 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require main
  *= require_tree .
  *= require_self
  */
