--- a/public/templates/boards/show.html
+++ b/public/templates/boards/show.html
@@ -8,7 +8,7 @@
 
   <div class="row">
     <div class="col-xs-8">
-      <div ui-view="list-index"></div>
+      <div id="list-index" ui-view="list-index"></div>
     </div>
     <div class="col-xs-4">
       <div ui-view="activity-feed"></div>
