--- a/public/templates/lists/index.html
+++ b/public/templates/lists/index.html
@@ -1,2 +1,14 @@
-<h4>List index</h4>
-{{currentBoard}}
+<div class="list panel panel-default" ng-repeat="list in currentBoard.lists">
+  <div class="panel-heading">
+    <h5>{{ list.title }}</h5>
+    <p>{{ list.description }}</p>
+  </div>
+  <div class="panel-body">
+    <div class="well" ng-repeat="card in list.cards">
+      <p>{{ card.title }}</p>
+      <p>{{ card.description }}</p>
+    </div>
+  </div>
+  <div class="panel-footer">
+  </div>
+</div>
