--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
   width: 300px;
   display: inline-block;
   margin: 14px;
+  flex-shrink: 0;
 }
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
