--- a/public/templates/boards/show.html
+++ b/public/templates/boards/show.html
@@ -1,8 +1,8 @@
 <div class="container">
 <h3> {{currentBoard.title }}</h3> 
 
-<select>
-  <option ng-repeat="board in boards">{{board.title}}</option>
+<select ng-change="changeBoard()" ng-model="boardId">
+  <option ng-repeat="board in boards" ng-value="board.id">{{board.title}}</option>
 </select>
 <a>Delete Board</a> <a>Create Board</a>
 
