--- a/app/views/angular/index.html.erb
+++ b/app/views/angular/index.html.erb
@@ -6,7 +6,7 @@
 
 
       <ul class="nav navbar-nav">
-        <li><a>New Board</a></li>
+        <li><a ui-sref="new">New Board</a></li>
       </ul>
 
     <ul class="nav navbar-nav navbar-right">
