--- a/public/templates/boards/new.html
+++ b/public/templates/boards/new.html
@@ -4,7 +4,7 @@
 
     <div class="form-group">
       <input type="submit" class="btn btn-success btn-big" value="save"> 
-      <button class="btn btn-danger btn-big" ui-sref="show({id: lastId})">Cancel!</button>
+      <button class="btn btn-danger btn-big" onclick="history.back()">Cancel!</button>
     </div>
   </form>
 </div>
