--- a/public/templates/boards/show.html
+++ b/public/templates/boards/show.html
@@ -1,17 +1,34 @@
 <div class="container">
-<h3> {{currentBoard.title }}</h3> 
+<div id="boardInfo" ng-click="boardEdit()">
+  <h3> {{currentBoard.title }}</h3> 
+  <p> {{currentBoard.description}}</p>
+</div>
 
-<select ng-change="changeBoard()" ng-model="boardId">
-  <option ng-repeat="board in boards" ng-value="board.id">{{board.title}}</option>
-</select>
-<a ui-sref="delete({id: currentBoard.id})">Delete Board</a> <a ui-sref="new({lastId: currentBoard.id})">Create Board</a>
+<div id="boardForm" class="hidden">
+  <label>Title:</label>
+  <input type='text' ng-model='currentBoard.title'>
+  <br>
+  <label>Body:</label>
+  <input type='text' ng-model='currentBoard.description'>
+  <button ng-click="boardChange(currentBoard.id, currentBoard.title, currentBoard.description)" class="btn btn-primary">Save Changes </button>
+</div>
 
-  <div class="row">
-    <div class="col-xs-8">
-      <div id="list-index" ui-view="list-index"></div>
+<div class="row">
+  <div class="col-xs-4 col-xs-offset-8">
+    <select ng-change="changeBoard()" ng-model="boardId">
+      <option ng-repeat="board in boards" ng-value="board.id">{{board.title}}</option>
+    </select>
+    <a ui-sref="delete({id: currentBoard.id})">Delete Board</a> <a ui-sref="new({lastId: currentBoard.id})">Create Board</a>
+
+  </div>
+</div>
+<hr>
+<div class="row">
+  <div class="col-xs-8">
+    <div id="list-index" ui-view="list-index"></div>
     </div>
-    <div class="col-xs-4">
-      <div ui-view="activity-feed"></div>
+  <div class="col-xs-4">
+    <div ui-view="activity-feed"></div>
     </div>
   </div>
 </div>
